---
source: edgedb-composable-query/src/composable/mod.rs
assertion_line: 272
expression: "OuterQueryWithRef::query()"
---
with
	_selector := (select Outer limit 1),
select (_selector) {
	inner: {
		id,
		req := (.req),
		opt := (.opt),
	},
	some_field,
	other_field
}
